--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -18,32 +18,7 @@
 
             <include layout="@layout/toolbar" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="190dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="20dp"
-                    android:adjustViewBounds="true"
-                    android:paddingEnd="5dp"
-                    android:paddingStart="5dp"
-                    android:paddingTop="15dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/bg_header" />
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:paddingEnd="7dp"
-                    android:paddingStart="7dp"
-                    android:paddingTop="15dp"
-                    android:src="@drawable/logo_white" />
-            </RelativeLayout>
+            <include layout="@layout/header_feel_berlin" />
 
             <LinearLayout
                 android:layout_width="match_parent"
