--- a/app/src/main/res/layout/fragment_cool_places.xml
+++ b/app/src/main/res/layout/fragment_cool_places.xml
@@ -3,26 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <FrameLayout
+        android:id="@+id/places_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:scrollbars="none">
+        android:layout_below="@+id/toolbar" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include layout="@layout/toolbar" />
-
-            <FrameLayout
-                android:id="@+id/places_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-    </ScrollView>
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/filter"
