--- a/app/src/main/res/layout/fragment_my_ticket.xml
+++ b/app/src/main/res/layout/fragment_my_ticket.xml
@@ -6,15 +6,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingBottom="40dp">
+            android:orientation="vertical">
 
             <include layout="@layout/toolbar_white" />
 
@@ -72,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
+                android:layout_marginBottom="35dp"
                 android:text="@string/edit_profile"
                 android:textAllCaps="true"
                 android:textColor="@color/light_gray_text" />
