--- a/app/src/main/res/layout/toolbar_places.xml
+++ b/app/src/main/res/layout/toolbar_places.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_header"
-    android:paddingTop="30dp"
-    tools:showIn="@layout/fragment_updates">
+    android:paddingTop="30dp">
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/btn_menu"
