--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -29,7 +30,8 @@
             android:drawableStart="@drawable/feedback"
             android:text="@string/leave_feedback"
             android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            app:font="light" />
     </LinearLayout>
 
     <android.support.v7.widget.AppCompatEditText
@@ -60,6 +62,7 @@
         android:text="@string/send"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:font="light" />
 
 </RelativeLayout>
