--- a/app/src/main/res/layout/activity_notification_settings.xml
+++ b/app/src/main/res/layout/activity_notification_settings.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -27,7 +28,8 @@
             android:drawableStart="@drawable/alert"
             android:text="@string/notifications"
             android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            app:font="light" />
     </LinearLayout>
 
     <RelativeLayout
@@ -43,7 +45,8 @@
             android:layout_marginStart="15dp"
             android:text="@string/in_app_notifications"
             android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            app:font="light" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switch_ntf"
@@ -69,7 +72,8 @@
             android:layout_marginStart="15dp"
             android:text="@string/in_app_vibrate"
             android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            app:font="light" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switch_vibrate"
@@ -95,7 +99,8 @@
             android:layout_marginStart="15dp"
             android:text="@string/in_app_sounds"
             android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            app:font="light" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switch_sound"
