--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,7 +32,8 @@
                 android:text="@string/sign_in_header_text"
                 android:textAllCaps="false"
                 android:textColor="@color/gray_text"
-                android:textSize="@dimen/text_size" />
+                android:textSize="@dimen/text_size"
+                app:font="light" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,7 +76,8 @@
                         android:text="@string/forgot_password"
                         android:textAllCaps="false"
                         android:textColor="@color/gray_text"
-                        android:textSize="@dimen/text_size" />
+                        android:textSize="@dimen/text_size"
+                        app:font="light" />
                 </RelativeLayout>
 
                 <android.support.v7.widget.AppCompatCheckBox
@@ -100,7 +102,7 @@
                     android:text="@string/sign_in"
                     android:textAllCaps="false"
                     android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    app:font="semibold" />
 
                 <de.feelberlin.android.view.FBTextView
                     android:id="@+id/skip"
@@ -110,7 +112,8 @@
                     android:layout_marginTop="20dp"
                     android:text="@string/skip_step"
                     android:textAllCaps="true"
-                    android:textColor="@color/light_gray_text" />
+                    android:textColor="@color/light_gray_text"
+                    app:font="ultralight" />
 
             </LinearLayout>
 
@@ -134,7 +137,8 @@
                     android:paddingStart="30dp"
                     android:text="@string/don_t_have_an_account"
                     android:textAllCaps="true"
-                    android:textColor="@color/light_gray_text" />
+                    android:textColor="@color/light_gray_text"
+                    app:font="light" />
 
 
                 <de.feelberlin.android.view.FBTextView
@@ -149,7 +153,7 @@
                     android:text="@string/sign_up"
                     android:textAllCaps="true"
                     android:textColor="@color/gray_text"
-                    android:textStyle="bold" />
+                    app:font="semibold" />
 
             </RelativeLayout>
         </LinearLayout>
