--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,7 +34,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                app:font="semibold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -96,7 +96,7 @@
                     android:text="@string/sign_up"
                     android:textAllCaps="false"
                     android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
+                    app:font="semibold" />
 
                 <de.feelberlin.android.view.FBTextView
                     android:id="@+id/skip"
@@ -106,14 +106,14 @@
                     android:layout_marginTop="20dp"
                     android:text="@string/skip_step"
                     android:textAllCaps="true"
-                    android:textColor="@color/light_gray_text" />
+                    android:textColor="@color/light_gray_text"
+                    app:font="ultralight" />
 
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:paddingBottom="15dp">
 
                 <View
@@ -130,7 +130,8 @@
                     android:paddingStart="30dp"
                     android:text="@string/already_have_an_account"
                     android:textAllCaps="true"
-                    android:textColor="@color/light_gray_text" />
+                    android:textColor="@color/light_gray_text"
+                    app:font="light" />
 
 
                 <de.feelberlin.android.view.FBTextView
@@ -145,7 +146,7 @@
                     android:text="@string/sign_in"
                     android:textAllCaps="true"
                     android:textColor="@color/gray_text"
-                    android:textStyle="bold" />
+                    app:font="semibold" />
 
             </RelativeLayout>
 
