--- a/app/src/main/res/layout/card_update_article.xml
+++ b/app/src/main/res/layout/card_update_article.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,7 +21,8 @@
         android:text="Come sit next to us at the Tribal Bar"
         android:textAllCaps="false"
         android:textColor="@color/gray_text"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:font="light" />
 
     <de.feelberlin.android.view.FBTextView
         android:id="@+id/tags"
@@ -31,7 +33,8 @@
         android:text="#tribaldrink #fun #pinacolada #allday"
         android:textAllCaps="false"
         android:textColor="@color/light_gray_text"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:font="light" />
 
     <View
         android:layout_width="match_parent"
@@ -55,7 +58,8 @@
             android:drawableStart="@drawable/heart"
             android:text="23"
             android:textColor="#f05e59"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:font="light" />
 
         <de.feelberlin.android.view.FBTextView
             android:id="@+id/shares"
@@ -67,7 +71,8 @@
             android:drawableStart="@drawable/share_green"
             android:text="43"
             android:textColor="@color/colorPrimary"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:font="light" />
 
         <de.feelberlin.android.view.FBTextView
             android:id="@+id/date"
@@ -75,7 +80,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:text="25 minutes ago"
-            android:textColor="@color/light_gray_text" />
+            android:textColor="@color/light_gray_text"
+            app:font="light" />
     </RelativeLayout>
 
 </LinearLayout>
