--- a/app/src/main/res/layout/dialog_filter_places.xml
+++ b/app/src/main/res/layout/dialog_filter_places.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_filter_dialog"
@@ -13,7 +14,8 @@
         android:layout_marginTop="30dp"
         android:text="@string/fund_forum_2017"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:font="light" />
 
     <de.feelberlin.android.view.FBTextView
         android:id="@+id/venue"
@@ -22,7 +24,8 @@
         android:layout_marginTop="20dp"
         android:text="@string/feel_berlin_17_venue"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:font="light" />
 
     <de.feelberlin.android.view.FBTextView
         android:id="@+id/tribal_bar"
@@ -31,7 +34,8 @@
         android:layout_marginTop="20dp"
         android:text="@string/tribal_bar"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:font="light" />
 
     <de.feelberlin.android.view.FBTextView
         android:id="@+id/rests"
@@ -40,7 +44,8 @@
         android:layout_marginTop="20dp"
         android:text="@string/restaurants"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:font="light" />
 
     <de.feelberlin.android.view.FBTextView
         android:id="@+id/cafes"
@@ -49,7 +54,8 @@
         android:layout_marginTop="20dp"
         android:text="@string/cafes"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:font="light" />
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/btn_close"
