--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -41,7 +42,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -51,7 +52,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -61,7 +62,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -71,7 +72,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -81,7 +82,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -91,7 +92,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -107,7 +108,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -117,7 +118,8 @@
                         android:textAllCaps="false"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -127,7 +129,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -162,7 +164,7 @@
                         android:textAllCaps="true"
                         android:textColor="@color/gray_text"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
 
                     <de.feelberlin.android.view.FBTextView
                         android:layout_width="wrap_content"
@@ -173,7 +175,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        app:font="semibold" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -192,7 +194,8 @@
                 android:paddingStart="30dp"
                 android:text="@string/lorem_ipsum"
                 android:textColor="@color/gray_text"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:font="light" />
 
 
             <LinearLayout
@@ -216,7 +219,7 @@
                 android:text="@string/see_agenda"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                app:font="semibold" />
 
         </LinearLayout>
     </ScrollView>
