--- a/app/src/main/res/layout/fragment_my_ticket.xml
+++ b/app/src/main/res/layout/fragment_my_ticket.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -31,7 +32,8 @@
                 android:text="0.1234324 FDWV"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:font="light" />
 
             <de.feelberlin.android.view.FBTextView
                 android:layout_width="match_parent"
@@ -41,7 +43,8 @@
                 android:text="@string/your_qr_has_been_created"
                 android:textAllCaps="true"
                 android:textColor="@color/gray_text"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:font="light" />
 
             <de.feelberlin.android.view.FBTextView
                 android:layout_width="match_parent"
@@ -51,7 +54,8 @@
                 android:paddingStart="30dp"
                 android:text="@string/download_your_qr"
                 android:textColor="@color/gray_text"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:font="light" />
 
             <de.feelberlin.android.view.FBButton
                 android:id="@+id/btn_download"
@@ -64,17 +68,18 @@
                 android:text="@string/download"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                app:font="semibold" />
 
             <de.feelberlin.android.view.FBTextView
                 android:id="@+id/edit_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
                 android:layout_marginBottom="35dp"
+                android:layout_marginTop="25dp"
                 android:text="@string/edit_profile"
                 android:textAllCaps="true"
-                android:textColor="@color/light_gray_text" />
+                android:textColor="@color/light_gray_text"
+                app:font="light" />
 
         </LinearLayout>
     </ScrollView>
