--- a/app/src/main/res/layout/gallery_view.xml
+++ b/app/src/main/res/layout/gallery_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="@layout/card_update_gallery_article">
 
 
@@ -78,7 +79,8 @@
                 android:focusable="false"
                 android:text="+5"
                 android:textColor="@color/white"
-                android:textSize="50sp" />
+                android:textSize="50sp"
+                app:font="light" />
 
         </RelativeLayout>
     </LinearLayout>
