--- a/app/src/main/res/layout/menu_footer.xml
+++ b/app/src/main/res/layout/menu_footer.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,6 +15,7 @@
         android:drawableStart="@drawable/menu_7"
         android:text="@string/logout"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:font="light" />
 
 </LinearLayout>
