--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,7 +15,7 @@
         android:text="John DOE"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        app:font="semibold" />
 
     <de.feelberlin.android.view.FBTextView
         android:id="@+id/email"
@@ -24,6 +25,7 @@
         android:paddingStart="23dp"
         android:text="john.doe@feelberlin17.com"
         android:textColor="@color/white"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        app:font="light" />
 
 </LinearLayout>
