--- a/app/src/main/res/layout/onboarding_third.xml
+++ b/app/src/main/res/layout/onboarding_third.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -21,7 +22,8 @@
         android:text="And discover our custom"
         android:textAllCaps="false"
         android:textColor="@color/gray_text"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        app:font="light" />
 
     <de.feelberlin.android.view.FBTextView
         android:layout_width="wrap_content"
@@ -30,7 +32,7 @@
         android:textAllCaps="true"
         android:textColor="@color/gray_text"
         android:textSize="25sp"
-        android:textStyle="bold" />
+        app:font="semibold" />
 
     <de.feelberlin.android.view.FBTextView
         android:layout_width="wrap_content"
