--- a/app/src/main/res/layout/popup_contact.xml
+++ b/app/src/main/res/layout/popup_contact.xml
@@ -1,37 +1,51 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg_popup"
-    android:orientation="vertical"
-    android:paddingBottom="40dp"
-    android:paddingTop="20dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <de.feelberlin.android.view.FBTextView
-        android:id="@+id/send_email"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:text="@string/send_email"
-        android:textColor="@color/colorPrimary"
-        android:textSize="16sp" />
+        android:layout_centerInParent="true"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
+        android:scaleY="-1"
+        android:src="@drawable/bg_popup" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/gray_text" />
-
-    <de.feelberlin.android.view.FBTextView
-        android:id="@+id/call"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:text="Call (023 7564 4672)"
-        android:textColor="@color/gray_text"
-        android:textSize="16sp" />
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+        android:paddingTop="15dp">
 
-</LinearLayout>
+        <de.feelberlin.android.view.FBTextView
+            android:id="@+id/send_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/send_email"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
+            app:font="light" />
+
+        <View
+            android:layout_width="180dp"
+            android:layout_height="1px"
+            android:layout_marginTop="10dp"
+            android:background="@color/gray_text" />
+
+        <de.feelberlin.android.view.FBTextView
+            android:id="@+id/call"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:text="Call (023 7564 4672)"
+            android:textColor="@color/gray_text"
+            android:textSize="16sp"
+            app:font="light" />
+    </LinearLayout>
+
+</RelativeLayout>
