--- a/app/src/main/res/layout/toolbar_places.xml
+++ b/app/src/main/res/layout/toolbar_places.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_header"
@@ -42,5 +43,6 @@
         android:layout_marginTop="40dp"
         android:text="Drag and release for updates"
         android:textAllCaps="true"
-        android:textColor="@color/gray" />
+        android:textColor="@color/gray"
+        app:font="light" />
 </RelativeLayout>
