--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -45,7 +45,8 @@
                 android:paddingEnd="30dp"
                 android:paddingStart="30dp">
 
-                <android.support.v7.widget.AppCompatEditText
+                <de.feelberlin.android.view.FBEditText
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="20dp"
@@ -54,7 +55,8 @@
                     android:inputType="text"
                     android:textSize="@dimen/text_size" />
 
-                <android.support.v7.widget.AppCompatEditText
+                <de.feelberlin.android.view.FBEditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -64,7 +66,8 @@
                     android:inputType="textEmailAddress"
                     android:textSize="@dimen/text_size" />
 
-                <android.support.v7.widget.AppCompatEditText
+                <de.feelberlin.android.view.FBEditText
+                    android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -74,7 +77,8 @@
                     android:inputType="textPassword"
                     android:textSize="@dimen/text_size" />
 
-                <android.support.v7.widget.AppCompatEditText
+                <de.feelberlin.android.view.FBEditText
+                    android:id="@+id/dob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -83,7 +87,6 @@
                     android:hint="@string/bday"
                     android:inputType="date"
                     android:textSize="@dimen/text_size" />
-
 
                 <de.feelberlin.android.view.FBButton
                     android:id="@+id/btn_sign_up"
